--- a/lesson-13/index.html
+++ b/lesson-13/index.html
@@ -12,9 +12,13 @@
 				<div class="header">
 					<p class="header-form">Create an Account</p>
 				</div>
-				<input type="Email" placeholder="jonsmith@gmail.com">
-				<input type="Choose Password">
-				<input type="Confirm Password">
+
+				<p class="name_input1">Email:</p>
+				<input type="#" class="text-input1" placeholder="jonsmith@gmail.com">
+				<p class="name_input2">Choose password:</p>
+				<input type="#" class="text-input2">
+				<p class="name_input3">Confirm password:</p>
+				<input type="#" class="text-input3">
 				<button class="btn">Register now!</button>
 			</div>
 		</div>
