--- a/lesson-13/index.html
+++ b/lesson-13/index.html
@@ -7,20 +7,17 @@
 </head>
 <body>
 	<div class="main">
-		<div class="row">
-			<div class="form">
-				<div class="header">
-					<p class="header-form">Create an Account</p>
-				</div>
-
-				<p class="name_input1">Email:</p>
-				<input type="#" class="text-input1" placeholder="jonsmith@gmail.com">
-				<p class="name_input2">Choose password:</p>
-				<input type="#" class="text-input2">
-				<p class="name_input3">Confirm password:</p>
-				<input type="#" class="text-input3">
-				<button class="btn">Register now!</button>
+		<div class="form">
+			<div class="header">
+				<p class="header-form">Create an Account</p>
 			</div>
+			<p class="name_input1">Email:</p>
+			<input type="#" class="field1" placeholder="jonsmith@gmail.com">
+			<p class="name_input2">Choose password:</p>
+			<input type="#" class="field2">
+			<p class="name_input3">Confirm password:</p>
+			<input type="#" class="field3">
+			<button class="btn">Register now!</button>
 		</div>
 	</div>
 </body>
