--- a/Lesson_17/index.html
+++ b/Lesson_17/index.html
@@ -5,11 +5,11 @@
 	<title>Всплывающие окна</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+
 </head>
 <body>
 <div class="container">
+	<a href="#my-modal" data-toggle="modal">fdfdf</a>
 	<button class="btn btn-success" data-toggle="modal" data-target="#my-modal">Кнопка вызова модального окна</button>
 </div>
 
@@ -32,6 +32,7 @@
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
+  <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 
 
 
