--- a/Lesson_17/index.html
+++ b/Lesson_17/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="container">
-	<a href="#my-modal" data-toggle="modal">fdfdf</a>
+	<a href="#my-modal" data-toggle="modal">удалить</a>
 	<button class="btn btn-success" data-toggle="modal" data-target="#my-modal">Кнопка вызова модального окна</button>
 </div>
 
