--- a/Lesson_17/index.html
+++ b/Lesson_17/index.html
@@ -6,35 +6,32 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
 
+  <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+
 </head>
 <body>
 <div class="container">
-	<a href="#my-modal" data-toggle="modal">удалить</a>
-	<button class="btn btn-success" data-toggle="modal" data-target="#my-modal">Кнопка вызова модального окна</button>
+	<button class="btn btn-success" data-toggle="modal" data-target="#my-modal">Удалить файл</button>
 </div>
 
-	
 	<div class="modal fade" id="my-modal">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Modal title</h4>
+        <h4 class="modal-title">Удаление файла</h4>
       </div>
       <div class="modal-body">
-        <p>One fine body&hellip;</p>
+        <p>Вы действительно  хотите удалить файл?&hellip;</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Да</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Нет</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
-
-  <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-
-
 
 </body>
 </html>
