--- a/Lesson_17/index.html
+++ b/Lesson_17/index.html
@@ -6,9 +6,8 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
 
-  <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+  	<script src="js/jquery-1.12.4.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-
 </head>
 <body>
 <div class="container">
