--- a/lesson-13/index.html
+++ b/lesson-13/index.html
@@ -3,21 +3,23 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Pixel Perfect</title>
+		<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
-	<div class="main">
+	<div class="container">
 		<div class="form">
-			<div class="header">
-				<p class="header-form">Create an Account</p>
-			</div>
-			<p class="name_input1">Email:</p>
-			<input type="#" class="field1" placeholder="jonsmith@gmail.com">
-			<p class="name_input2">Choose password:</p>
-			<input type="#" class="field2">
-			<p class="name_input3">Confirm password:</p>
-			<input type="#" class="field3">
-			<button class="btn">Register now!</button>
+			<div class="header">Create an Account</div>
+				<form action="">
+					<div class="form_input email">Email:</div>
+						<input type="#" class="field" placeholder="jonsmith@gmail.com">
+					<div class="form_input password">Choose password:</div>
+						<input type="#" class="field">
+					<div class="form_input password">Confirm password:</div>
+						<input type="#" class="field">
+					<button class="form-btn">Register now!</button>
+				</form>
 		</div>
 	</div>
 </body>
